syntax = "proto2";

package keras_classification.protos;

import "keras_classification/protos/optimizer.proto";

message Trainer {
    message Options {
        required string training_data_dir = 1;
        required string validation_data_dir = 2;
        required int32 nb_epochs = 4;
        required int32 batch_size = 5;
        required int32 input_size = 6;
        required string output_dir = 7;
        repeated string class_names = 8;
        required bool short_epoch = 9 [default=false];
    }

    required Optimizer optimizer = 1;
    required Options options = 2;
}
